2007-09-12  Cosimo Cecchi  <cosimoc@svn.gnome.org>

	* src/ephy-lockdown.c: (update_window):

	Fix disable_toolbar_editing lockdown not respected for Remove and Move
	actions on toolbar buttons. Bug #475641. Patch by Cyril Brulebois.

2007-09-12  Cosimo Cecchi  <cosimoc@svn.gnome.org>

	* src/ephy-history-window.c: (search_entry_clear_cb),
	(build_search_box):

	Adapt EphyHistoryWindow to the iconified EphySearchEntry and adds
	a cleaner button in its search entry, like in Bookmarks Editor.
	Fixes bug #476179.

2007-09-12  Cosimo Cecchi  <cosimoc@svn.gnome.org>

	* src/ephy-find-toolbar.c: (ephy_find_toolbar_open):

	Find toolbar now remembers last pattern searched also when opened with
	GDK_slash or GDK_apostrophe. Fixes bug #343337.

2007-09-11  Cosimo Cecchi  <cosimoc@svn.gnome.org>

	* src/ephy-home-action.c: (action_name_association),
	(ephy_home_action_activate), (home_action_drag_data_received_cb),
	(connect_proxy), (disconnect_proxy), (ephy_home_action_class_init):

	Adds drag-and-drop of URLs onto "New Tab" and "New Window" buttons in
	the toolbar. Fixes bug #382383.

2007-09-10  Christian Persch  <chpe@gnome.org>

	* m4/gecko.m4:

	Make sure the gecko version is set to 0 if we're not compiling with
	the gecko backend. Bug #475461, patch by Cyril Brulebois.

2007-09-10  Christian Persch  <chpe@gnome.org>

	* configure.ac:

	Error out if the C++ compiler wasn't found. Bug #475360.

2007-09-10  Cosimo Cecchi  <cosimoc@svn.gnome.org>

	* src/ephy-toolbar.c: (ephy_toolbar_set_navigation_tooltips):
	* src/ephy-toolbar.h:
	* src/ephy-window.c: (sync_tab_navigation):

	Makes tooltips for Back and Forward buttons display the titles of
	relative pages. Fixes bug #341400. Patch by Cyril Brulebois.

2007-09-10  Cosimo Cecchi  <cosimoc@svn.gnome.org>

	* src/ppview-toolbar.c: (ppview_toolbar_set_window):

	Forces the display of "Close print preview" on the relative toolbar
	button in the print preview window. See bug #109063. Patch by
	Cyril Brulebois.
